[package]
name = "disk-queue"
version = "0.1.1"
edition = "2021"
authors = ["Armin Primadi <aprimadi@gmail.com>"]
keywords = ["disk-queue", "queue"]
description = "FIFO queue backed by disk"
homepage = "https://github.com/aprimadi/disk-queue"
repository = "https://github.com/aprimadi/disk-queue"
license = "MIT"

[dependencies]
memmap = "0.7"

[dev-dependencies]
criterion = "0.3"
rand = "0.8"

[[bench]]
name = "write"
harness = false

[[bench]]
name = "read"
harness = false

